@@ -1,2 +1,2 @@
-This package accompanies J. Fox and S. Weisberg, An R Companion to
-Applied Regression, Second Edition, Sage, 2011.
+Functions to Accompany J. Fox and S. Weisberg, An R Companion to
+Applied Regression, Third Edition, Sage, in press.
