@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2019,v 1.3163 2019/07/31 18:53:16 brook Exp $
+$NetBSD: CHANGES-2019,v 1.3164 2019/07/31 19:03:32 brook Exp $
 
 Changes to the packages collection and infrastructure in 2019:
 
@@ -5120,3 +5120,4 @@ Changes to the packages collection and infrastructure in 2019:
 	Updated math/R-VGAM to 1.1.1 [brook 2019-07-31]
 	Updated math/R-XML to 3.98.1.20 [brook 2019-07-31]
 	Updated math/R-aplpack to 1.3.2 [brook 2019-07-31]
+	Updated math/R-car to 3.0.3 [brook 2019-07-31]
